refactor : 원소가 1개이며 변할 일 없는 컬렉션을 Collections.singletone 으로 표현 (#54)